# agentforge

./: .env.example  .gitignore  README.md  pyproject.toml
config/: __init__.py  llm.yml  settings.py  tools.yml
docs/: cluade_code_rag_analyse.md  design_philosophy.md  frame.md  index.html  intent_recognition_framework.md  learn_from_learn_claude_code.md  prompt_cache.md  reliable_tool_calling.md
examples/chatbot/: README.md
examples/chatbot/backend/: main.py
examples/chatbot/backend/static/: index.html
examples/chatbot/frontend/: package.json  vite.config.js
examples/chatbot/frontend/src/: App.jsx
examples/chatbot/supervisor/: agentforge.conf  chatbot.conf
projects/: README.md
projects/chatbot/: README.md
projects/chatbot/backend/: agent_setup.py  ai_news.py  alembic.ini  auth.py  config.py  main.py  models.py  routes.py  session.py  user_config.py
projects/chatbot/backend/alembic/: env.py  script.py.mako
projects/chatbot/backend/alembic/versions/: 0001_initial_schema.py  0002_user_item_configs.py
projects/chatbot/backend/db/: __init__.py  database.py
projects/chatbot/backend/db/data/: .gitkeep
projects/chatbot/backend/db/models/: __init__.py  ai_news.py  link_square.py  messages.py  user_item_configs.py  users.py
projects/chatbot/backend/test_scripts/: README.md  run_local_tests.py  test_api_integration.py  test_auth.py  test_config.py  test_session.py
projects/chatbot/frontend/: index.html  package-lock.json  package.json  vite.config.js
projects/chatbot/frontend/src/: App.jsx  appConfig.js  main.jsx  styles.css
projects/chatbot/frontend/src/api/: index.js
projects/chatbot/frontend/src/components/AuthModal/: index.jsx  styles.css
projects/chatbot/frontend/src/hooks/: useAuth.js  useChats.js  useSSE.js  useTypewriter.js
projects/chatbot/frontend/src/styles/: global.css  variables.css
projects/chatbot/supervisor/: chatbot.conf
src/agent/: README.md  __init__.py  core.py  errors.py  mcp.py  memory.py  message.py  provider.py  registry.py  schema_validator.py  session.py  skill.py  types.py  usage.py
src/memory/: README.md  __init__.py  simple.py
src/providers/: README.md  minimax.py
src/tools/: README.md  __init__.py  calculator.py  file_ops.py  file_parser.py  skill_tool.py  web_search.py
test_scripts/: test_core_runtime.py  test_mcp.py  test_providers.py  test_session.py  test_skill.py  test_tools.py
(+12 files in other folders)
