[project]
name = "agent"
version = "0.1.0"
description = "AgentForge core runtime for pluggable agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.23.0",
    "websockets>=10.0",
    "docling>=2.92.0",
    "onnxruntime>=1.26.0",
    "rapidocr>=3.8.1",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
validation = ["jsonschema"]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.build]
exclude = [
    "/res/**",
    "/test_scripts/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/scripts", "src/tools", "src/memory", "src/providers", "src/skills"]
